--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "pnpm -r test || true",
     "e2e": "echo \"e2e package not yet implemented\"",
     "bench": "pnpm -C packages/bench build && node packages/bench/dist/cli.js",
-    "bench:trio": "pnpm -C packages/bench build && node packages/bench/dist/trio.js"
+    "bench:trio": "pnpm -C packages/bench build && node packages/bench/dist/trio.js",
+    "start:all": "pnpm -C packages/bench build && node packages/bench/dist/start-all.js"
   },
   "license": "MIT",
   "devDependencies": {
