--- a/apps/baseline-express/tsconfig.json
+++ b/apps/baseline-express/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
-    "module": "ESNext",
+    "module": "NodeNext",
     "target": "ES2022"
   },
   "include": ["src"]
