feat(bench): add Flask baseline (gunicorn), quad orchestration, wrk2 runner, and micro endpoints; docs updates\n\n- New Flask baseline under apps/baseline-flask with gunicorn:\n  /healthz, /tool, /api/chat/completions (SSE), /micro/plain, /micro/chunked\n- Express & FastAPI: add /micro/plain and /micro/chunked\n- bench: add quad.ts orchestration to run elide/express/fastapi/flask\n- bench: add wrk2.ts (wrk/wrk2 wrapper) and include Flask in results index\n- docs: update BENCHMARKS.md with Flask, wrk2, quad instructions\n- chore: .gitignore Python caches/venv and bench results; remove tracked __pycache__\n- build: TS config tweaks for bench & express\n\nWindows/WSL note: prefer WSL for FastAPI/Flask processes to avoid ENOENT when spawned by CLI.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,14 @@ Thumbs.db
 # Build artifacts
 *.tsbuildinfo
 
+
+
+# Python
+__pycache__/
+*.py[cod]
+*.egg-info/
+.venv/
+**/.venv/
+
+# Bench results (generated)
+packages/bench/results/
