--- a/apps/baseline-express/tsconfig.json
+++ b/apps/baseline-express/tsconfig.json
@@ -4,7 +4,8 @@
     "outDir": "dist",
     "rootDir": "src",
     "module": "NodeNext",
-    "target": "ES2022"
+    "target": "ES2022",
+    "types": ["node"]
   },
   "include": ["src"]
 }
