--- a/packages/bench/package.json
+++ b/packages/bench/package.json
@@ -10,7 +10,8 @@
     "build": "tsc -p tsconfig.json",
     "smoke": "node dist/cli.js smoke",
     "run": "node dist/cli.js run",
-    "quad": "node dist/quad.js",
+    "bench": "node dist/bench.js",
+    "quad": "node dist/bench.js",
     "wrk2": "node dist/wrk2.js"
   },
   "devDependencies": {
