refactor(bench): remove QUAD_* and quad.*; finalize 5-target bench + UI\n\n- Bench: BENCH_* envs only; add BENCH_BASE_* and BENCH_ELIDE_CMD/BENCH_BASE_ELIDE\n- Server: health now includes elide (8084); run-cli passes BENCH_* envs\n- UI: add Elide stoplight; fix Frameworks Online 4→5\n- Compose: update bench env to BENCH_BASE_* (add ELIDE)\n- Docs: clarify BENCH_* vars; update Elide runtime instructions\n- E2E: update title check to 'Elide-Bench'\n- Remove legacy packages/bench/src/quad.ts and quad scripts

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -73,9 +73,10 @@ services:
     working_dir: /app
     command: ["node", "packages/bench/dist/bench.js"]
     environment:
-      - QUAD_BASE_ELIDE=http://elide:8080
-      - QUAD_BASE_EXPRESS=http://express:8081
-      - QUAD_BASE_FASTAPI=http://fastapi:8082
-      - QUAD_BASE_FLASK=http://flask:8083
+      - BENCH_BASE_NODE_RAW=http://elide:8080
+      - BENCH_BASE_EXPRESS=http://express:8081
+      - BENCH_BASE_FASTAPI=http://fastapi:8082
+      - BENCH_BASE_FLASK=http://flask:8083
+      - BENCH_BASE_ELIDE=http://elide:8084
     volumes:
       - ../packages/bench/results:/app/packages/bench/results
